feat(event): add event model

--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -11,13 +11,13 @@
             </div>
             <div class="modal-body">
                 <p class="card-text">
-                    Nulla non arcu lacinia neque faucibus fringilla. Duis pulvinar. Nulla quis diam. Vivamus ac leo
-                    pretium faucibus. Aliquam ornare wisi eu metus. Aliquam erat volutpat. In sem justo, commodo ut,
-                    suscipit at, pharetra vitae, orci. Nulla pulvinar eleifend sem. Praesent id justo in neque
-                    elementum ultrices. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem.
+                    Každé úterý můžete přijít na naše pravidelné setkání, které se koná v některém z pražských queer 
+                    friendly barů, kaváren nebo restaurací. Cílem úterních setkání je poznat se navzájem, navázat nová 
+                    přátelství a odpočinout si po dlouhém dni. Jedná se o naší základní a také nejstarší akci. Občas je 
+                    klasické setkání nahrazeno například deskovkami, piknikem nebo přednáškou.
                 </p>
                 <div style="margin-top:2rem;">
-                    <img class="card-img-top" src="{% static 'tuesday.jpg' %}" alt="Card image cap">
+                    <img class="card-img-top" src="{% static 'utery2.jpg' %}" alt="Card image cap">
                 </div>
             </div>
             <div class="modal-footer">
@@ -39,13 +39,17 @@
             </div>
             <div class="modal-body">
                 <p class="card-text">
-                    Nulla non arcu lacinia neque faucibus fringilla. Duis pulvinar. Nulla quis diam. Vivamus ac leo
-                    pretium faucibus. Aliquam ornare wisi eu metus. Aliquam erat volutpat. In sem justo, commodo ut,
-                    suscipit at, pharetra vitae, orci. Nulla pulvinar eleifend sem. Praesent id justo in neque
-                    elementum ultrices. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem.
+                    Are you new in Prague? Do you want to get to know other LGBTQIA+ students or expats and find new
+                    friends? Come join us for a Night Out! <br>
+                    This event is intended for foreign students currently studying in Prague or anyone who wants to
+                    practice their English skills and meet new friends. 🌈 <br>
+                    Anyone is welcome! <br>
+                    We are looking forward to seeing you. <br>
+                    If you have any questions, don't know where the venue is or are too shy to come alone and want us
+                    to pick you up somewhere, feel free to write us a private message 🌈❤️
                 </p>
 <!--                <div style="margin-top:2rem;">-->
-<!--                    <img class="card-img-top" src="{% static 'tuesday.jpg' %}" alt="Card image cap">-->
+<!--                    <img class="card-img-top" src="{% static 'nightout.jpg' %}" alt="Card image cap">-->
 <!--                </div>-->
             </div>
             <div class="modal-footer">
@@ -56,24 +60,25 @@
     </div>
 </div>
 
-<div class="modal fade" id="film" tabindex="-1" role="dialog" aria-labelledby="filmLabel" aria-hidden="true">
+<div class="modal fade" id="deskovky" tabindex="-1" role="dialog" aria-labelledby="deskovkyLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="filmLabel">Filmový klub</h5>
+                <h5 class="modal-title" id="deskovkyLabel">Deskovky</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <p class="card-text">
-                    Nulla non arcu lacinia neque faucibus fringilla. Duis pulvinar. Nulla quis diam. Vivamus ac leo
-                    pretium faucibus. Aliquam ornare wisi eu metus. Aliquam erat volutpat. In sem justo, commodo ut,
-                    suscipit at, pharetra vitae, orci. Nulla pulvinar eleifend sem. Praesent id justo in neque
-                    elementum ultrices. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem.
+                    Hrajete rádi deskové hry? Přijďte si zahrát s námi! Jednou měsíčně pořádáme deskovečer. Hrajeme
+                    všechny typy her, karetní hry, hry na postřeh, ale i hry logické a strategické, u kterých budete
+                    zapojovat své mozkové buňky.
+                    Hry si nosíme vlastní. Pokud sám vlastníš nějakou zábavnou deskovou hru, kterou by sis chtěl s
+                    námi zahrát, budeme rádi, když ji přineseš.
                 </p>
 <!--                <div style="margin-top:2rem;">-->
-<!--                    <img class="card-img-top" src="{% static 'tuesday.jpg' %}" alt="Card image cap">-->
+<!--                    <img class="card-img-top" src="{% static 'movie.jpg' %}" alt="Card image cap">-->
 <!--                </div>-->
             </div>
             <div class="modal-footer">
@@ -83,6 +88,14 @@
         </div>
     </div>
 </div>
+
+<!--
+FILMY
+Sledujete rádi filmy? Pokud ano, náš klub vám nabízí spoustu bijáků a kultovních klasik všeho druhu, od komedií,
+přes romantické slaďáky, hořkosladká dramata až po hořké dokumenty. Všem promítaným filmům je společná jejich queer
+tématika. Při jejich sledování si společně s hlavními postavami opět prožijete coming outy, první lásky, odloučení,
+strach či začlenění do LGBTQ+ komunity. Po samotném promítání často následuje i diskuze, kde se s ostatními diváky
+můžete podělit o svoje pocity. -->
 
 <div class="modal fade" id="trip" tabindex="-1" role="dialog" aria-labelledby="tripLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -95,10 +108,10 @@
             </div>
             <div class="modal-body">
                 <p class="card-text">
-                    Nulla non arcu lacinia neque faucibus fringilla. Duis pulvinar. Nulla quis diam. Vivamus ac leo
-                    pretium faucibus. Aliquam ornare wisi eu metus. Aliquam erat volutpat. In sem justo, commodo ut,
-                    suscipit at, pharetra vitae, orci. Nulla pulvinar eleifend sem. Praesent id justo in neque
-                    elementum ultrices. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem.
+                    Pokud už máte dost vysedávání po barech a kavárnách, nebo prostě jenom rádi chodíte a objevujete
+                    nová místa, pojďte s námi na výlet. Vyrážíme jak na kratší trasy po městě, tak na celodenní
+                    výpravy do vzdálenějšího okolí Prahy. Výlety se obvykle konají jednou za tři týdny, střídavě v
+                    sobotu a v neděli, ale je třeba se podívat na náš Facebook, kdy a kde se konkrétně sejdeme.
                 </p>
                 <div style="margin-top:2rem;">
                     <img class="card-img-top" src="{% static 'trip.jpg' %}" alt="Card image cap">
@@ -116,7 +129,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h2>Naše akce</h2>
+                <h2>
+                    Naše akce
+                    <a href="{% url 'upcoming_events' %}" class="btn btn-outline-primary ml-5">
+                        Nadcházející události
+                    </a>
+                </h2>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="event card my-3 shadow shadow-hover pointer" data-toggle="modal"
@@ -134,9 +152,9 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="event card my-3 shadow shadow-hover" data-toggle="modal"
-                             data-target="#film">
+                             data-target="#deskovky">
                             <div class="card-body lead text-center">
-                                Filmový klub
+                                Deskovky
                             </div>
                         </div>
                     </div>
@@ -148,33 +166,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-10 mx-auto" style="margin-top:2rem;">
-                <h2>Nadcházející události</h2>
-                <div class="row">
-                    {% if events %}
-                        {% for event in events %}
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title" style="font-weight:700;">{{ event.name }}</h5>
-                                        <h6 class="card-subtitle mb-2 text-muted" style="margin-top:1rem;">
-                                            {{ event.date|date:'d.m.Y, H:i' }}</h6>
-                                        <p class="card-text" style="margin-top:2rem;">{{ event.description }}</p>
-                                        <a href="{{ event.link }}" class="btn btn-primary" target="_blank">
-                                            Facebooková událost</a>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    {% else %}
-                        <div class="col-sm-6">
-                            <p>Nejsou naplánovány žádné události</p>
-                        </div>
-                    {% endif %}
                 </div>
             </div>
         </div>
