--- a/website_en/templates/home_en.html
+++ b/website_en/templates/home_en.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 mx-auto">
-                    <h2>Přidejte se k nám</h2>
+                    <h2>Join us</h2>
                     <p class="lead">
                         Our events are open to all, everyone´s welcome amongst us.
                         You can support us by either purchasing a lifetime membership or a year long membership.
