--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -67,7 +67,7 @@
     </section>
 
     <!-- https://developers.facebook.com/docs/plugins/page-plugin/ -->
-    <div class="fb-page" data-href="https://www.facebook.com/spolekcharlie/" data-tabs="events" data-width="380" data-height="" 
+    <div class="fb-page" data-href="https://www.facebook.com/spolekcharlie/" data-tabs="timeline,events" data-width="380" data-height="" 
          data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
         <blockquote cite="https://www.facebook.com/spolekcharlie/" class="fb-xfbml-parse-ignore">
             <a href="https://www.facebook.com/spolekcharlie/">Charlie, queer spolek Univerzity Karlovy</a>
