--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -67,12 +67,18 @@
     </section>
 
     <!-- https://developers.facebook.com/docs/plugins/page-plugin/ -->
-    <div class="fb-page" data-href="https://www.facebook.com/spolekcharlie/" data-tabs="timeline,events" data-width="380" data-height="" 
-         data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+    <div class="fb-page" data-href="https://www.facebook.com/spolekcharlie/" data-tabs="timeline,events" data-width="340"
+         data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false"
+         data-show-facepile="true" style="border:none;overflow:hidden">
         <blockquote cite="https://www.facebook.com/spolekcharlie/" class="fb-xfbml-parse-ignore">
             <a href="https://www.facebook.com/spolekcharlie/">Charlie, queer spolek Univerzity Karlovy</a>
         </blockquote>
     </div>
+
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FBirdhouseBrewingCompany&tabs=timeline%2Cevents&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=239502445001000"
+            width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+            allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+    </iframe>
 
     {% include 'partners.html' %}
 
