--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="google-site-verification" content="Ns7mVvv8bG-ksej-eyz3HQ7-RNGZ1Y2kaP3OdznxHPw"/>
 
+        <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
+
         <title>
             {% if request.path == "/" %}
                 Spolek Charlie
