feat(events): rename event calendar button

--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -132,7 +132,7 @@ můžete podělit o svoje pocity. -->
                 <h2>
                     Naše akce
                     <a href="{% url 'upcoming_events' %}" class="btn btn-outline-primary ml-5">
-                        Nadcházející události
+                        Kalendář akcí
                     </a>
                 </h2>
                 <div class="row">
