--- a/website_en/templates/events_en.html
+++ b/website_en/templates/events_en.html
@@ -127,7 +127,7 @@ share your feelings with other viewers. -->
                 <h2>
                     Our events
                     <a href="{% url 'upcoming_events_en' %}" class="btn btn-outline-primary ml-5">
-                        Upcoming events
+                        Event calendar
                     </a>
                 </h2>
                 <div class="row">
