--- a/website/templates/upcoming_events.html
+++ b/website/templates/upcoming_events.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h2>Nadcházející události</h2>
+                <h2>Kalendář akcí</h2>
             </div>
         </div>
     </div>
