--- a/website_en/templates/upcoming_events_en.html
+++ b/website_en/templates/upcoming_events_en.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h2>Upcoming events</h2>
+                <h2>Event calendar</h2>
             </div>
         </div>
     </div>
