feat(footer): add created by

--- a/website_en/templates/footer_en.html
+++ b/website_en/templates/footer_en.html
@@ -4,5 +4,8 @@
     <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Charlie, z.s. 2022</p>
         <p class="m-0 text-center text-white">Ovocný Trh 560/5, 110 00 Praha 1<br/>IČ: 22812571</p>
+        <p class="m-0 text-center text-white">
+            Created by <a target="_blank" href="https://richardmosko.eu">Richard Moško</a> and Matěj Růžička
+        </p>
     </div>
 </footer>
