--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -4,5 +4,8 @@
     <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Charlie, z.s. 2022</p>
         <p class="m-0 text-center text-white">Ovocný Trh 560/5, 110 00 Praha 1<br/>IČ: 22812571</p>
+        <p class="m-0 text-center text-white">
+            Vytvořili <a target="_blank" href="https://richardmosko.eu">Richard Moško</a> a Matěj Růžička
+        </p>
     </div>
 </footer>
