remove forced UTC+0 timezone in upcoming events

--- a/website/templates/upcoming_events.html
+++ b/website/templates/upcoming_events.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto">
                 <div class="row">
-                    <iframe src="https://calendar.google.com/calendar/embed?src=c_7dfc4db500407e34acab70927217ea90f135223d890c0989103d697156887c0d%40group.calendar.google.com&ctz=UTC" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://calendar.google.com/calendar/embed?src=c_7dfc4db500407e34acab70927217ea90f135223d890c0989103d697156887c0d%40group.calendar.google.com" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
         </div>
