fix(partners): update logos and links

--- a/website/templates/partners.html
+++ b/website/templates/partners.html
@@ -39,7 +39,7 @@
                                 </a>
                             </div>
                             <div class="slide">
-                                <a target="_blank" href="https://www.kampushybernska.cz/projekty/studentska-hybernska/">
+                                <a target="_blank" href="https://www.facebook.com/studentskahybernska/">
                                     <img src="{% static 'spol_hyb.png' %}" alt="Studenstká Hybernská">
                                     <span>Studenstká Hybernská</span>
                                 </a>
@@ -52,7 +52,7 @@
                             </div>
                             <div class="slide">
                                 <a target="_blank" href="https://strada.ff.cuni.cz">
-                                    <img src="{% static 'studentska_rada.jpeg' %}" alt="Studenstká rada Univerzity Karlovy">
+                                    <img src="{% static 'strada.jpeg' %}" alt="Studenstká rada Univerzity Karlovy">
                                     <span>Studenstká rada Univerzity Karlovy</span>
                                 </a>
                             </div>
